--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login_Page</title>
-    <link rel="stylesheet" href="Style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="Style.css" />
+  </head>
+  <body>
+    <div class="login_box">
+      <h2>Login Form</h2>
+      <form action="">
+        <div class="user_box">
+          <input type="text" name="" id="" required/>
+          <label for="">User Name</label>
+        </div>
+        <div class="user_box">
+          <input type="password" name="" id="" required/>
+          <label for="">Password</label>
+        </div>
+        <a href="">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Submit
+        </a>
+      </form>
+    </div>
+  </body>
 </html>
