--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
-    <div class="login_box">
+    <div class="login-box">
       <h2>Login Form</h2>
       <form action="">
         <div class="user_box">
@@ -19,7 +19,7 @@
           <input type="password" name="" id="" required/>
           <label for="">Password</label>
         </div>
-        <a href="">
+        <a href="#">
             <span></span>
             <span></span>
             <span></span>
