--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login_Page</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="Style.css" />
   </head>
   <body>
     <div class="login-box">
       <h2>Login Form</h2>
       <form action="">
-        <div class="user_box">
+        <div class="user-box">
           <input type="text" name="" id="" required/>
           <label for="">User Name</label>
         </div>
-        <div class="user_box">
+        <div class="user-box">
           <input type="password" name="" id="" required/>
           <label for="">Password</label>
         </div>
